# django-querycache

./: .coveragerc  .pre-commit-config.yaml  README.md  mypy.ini  pyproject.toml  setup.cfg
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: pytest.yaml
django_querycache/: cacheman.py  drf_mixins.py  fingerprinting.py  hashfunctions.py  runtests.py  type_annotations.py  utils.py
django_querycache/tests/: models.py  test_settings.py  tests.py
tests/: models.pyi  tests.py
