[tool.poetry]
name = "django-querycache"
version = "0.3.0a0"
description = "Cache manager for Django querysets and serialization"
authors = ["Joshua Brooks <josh.vdbroek@gmail.com>"]
license = "GPLv3"
exclude = ["django_querycache/runtests.py", "django_querycache/tests/**"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8.1"

[tool.poetry.group.dev.dependencies]
black = "*"
pytest = "*"
isort = "*"
flake8 = "*"
pre-commit = "*"
django-stubs = "*"
coverage = "*"
psycopg2-binary = "*"
rich = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = 'black'

[tool.black]
# 119 is the Django recommendation
# https://docs.djangoproject.com/en/dev/internals/contributing/writing-code/coding-style/
line-length = 119
target-version = ['py38']
include = '\.pyi?$'
exclude = '''
/(
  | \.git
  | \.mypy_cache
  | \.tox
)/
'''
